<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Play Anywhere</string>
    <string name="campaign">Campanha</string>
    <string name="quests">Quests</string>
    <string name="community">Comunidade</string>
    <string name="profile">Meu Perfil</string>
    <string name="newgame">Novo Jogo</string>
    <string name="masters">Área do Mestre</string>
    <string name="config">Configurações</string>
    <string name="quest">Quest</string>
    <string name="nickname">Nickname</string>
    <string name="systems">Sistemas de Jogo</string>
    <string name="recentcampaigns">Campanhas Atuais</string>
    <string name="experience">Nível de Experiência</string>
    <string name="evaluation">Avaliação do Jogador</string>
    <string name="campaigns">Campanhas</string>
    <string name="name">Nome</string>
    <string name="master">Mestre</string>
    <string name="scenario">Cenário</string>
    <string name="acts">Atos</string>
    <string name="message">Mensagem</string>
    <string name="system">Sistema</string>
    <string name="city">Cidade</string>
    <string name="birthdate">Data de Nascimento</string>
    <string name="password">Senha</string>
    <string name="contact">Contato</string>
    <string name="ok">OK</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="register">Registrar</string>
    <string name="add">Adicionar</string>
    <string name="wait">Por Favor, Aguarde...</string>
    <string name="newgame">Novo Jogo</string>
    <string name="choosecriteria">Escolha os critérios da busca</string>
    <string name="choosecampaign">Escolha a Campanha</string>
    <string name="search">Buscar</string>
    <string name="login">Login</string>
    <string name="onlyopen">Apenas disponíveis</string>
    <string name="choosepicture">Escolher Foto</string>
    <string name="createchar">Criar Personagem</string>
    <string name="selectsystem">Selecione o Sistema</string>
    <string name="player">Jogador</string>
    <string name="nature">Natureza</string>
    <string name="demeanor">Comportamento</string>
    <string name="concept">Conceito</string>
    <string name="vampire">Vampiro</string>
    <string name="clan">Clã</string>
    <string name="generation">Geração</string>
    <string name="haven">Refúgio</string>
    <string name="physical">Físico</string>
    <string name="strength">Força</string>
    <string name="stamina">Vigor</string>
    <string name="dexterity">Destreza</string>
    <string name="social">Social</string>
    <string name="charisma">Carisma</string>
    <string name="manipulation">Manipulação</string>
    <string name="appearance">Aparência</string>
    <string name="mental">Mental</string>
    <string name="knowledges">Conhecimentos</string>
    <string name="perception">Percepção</string>
    <string name="intelligence">Inteligência</string>
    <string name="wits">Raciocínio</string>
    <string name="left">Restante</string>
    <string name="talents">Talentos</string>
    <string name="skills">Perícias</string>
    <string name="acting">Representação</string>
    <string name="alertness">Prontidão</string>
    <string name="athletics">Esportes</string>
    <string name="brawl">Briga</string>
    <string name="dodge">Esquiva</string>
    <string name="empathy">Empatia</string>
    <string name="intimidation">Intimidação</string>
    <string name="leadership">Liderança</string>
    <string name="streetwise">Manha</string>
    <string name="subterfuge">Lábia</string>
    <string name="animalken">Emp. c/ Animais</string>
    <string name="drive">Condução</string>
    <string name="etiquette">Etiqueta</string>
    <string name="firearms">Armas de Fogo</string>
    <string name="melee">Armas Brancas</string>
    <string name="music">Música</string>
    <string name="repair">Reparos</string>
    <string name="security">Segurança</string>
    <string name="stealth">Furtividade</string>
    <string name="survival">Sobrevivência</string>
    <string name="bureaucracy">Burocracia</string>
    <string name="computer">Computador</string>
    <string name="finance">Finanças</string>
    <string name="investigation">Investigação</string>
    <string name="law">Direito</string>
    <string name="linguistics">Linguística</string>
    <string name="medicine">Medicina</string>
    <string name="occult">Ocultismo</string>
    <string name="politics">Política</string>
    <string name="science">Ciência</string>
    <string name="disciplines">Disciplinas</string>
    <string name="backgrounds">Antecedentes</string>
    <string name="virtues">Virtudes</string>
    <string name="conscience">Consciência</string>
    <string name="selfcontrol">Auto-Controle</string>
    <string name="courage">Coragem</string>
    <string name="traits">Outras Características</string>
    <string name="humanity">Humanidade</string>
    <string name="willpower">Força de Vontade</string>
    <string name="bloodpool">Pontos de Sangue</string>
    <string name="combat">Combate</string>
    <string name="weapon">Arma</string>
    <string name="difficulty">Dificuldade</string>
    <string name="damage">Dano</string>
    <string name="finish">Concluído</string>
    <string name="choosechar">Escolher Personagem</string>
</resources>