<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/lb_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name" />

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="2" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/lb_nature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nature" />

                    <EditText
                        android:id="@+id/et_nature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="2" >

                        <requestFocus />
                    </EditText>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/lb_demeanor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demeanor" />

                    <EditText
                        android:id="@+id/et_demeanor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="2" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/lb_clan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clan" />

                    <Spinner
                        android:id="@+id/sp_clan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/vampire_clans" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/lb_generation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/generation" />

                    <EditText
                        android:id="@+id/et_generation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="number" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/lb_haven"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/haven" />

                    <EditText
                        android:id="@+id/et_haven"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="2" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/lb_concept"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/concept" />

                    <EditText
                        android:id="@+id/et_concept"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="2" />

                </TableRow>

            </TableLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>